Starting status monitor, adding libstatgrab

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ FetchContent_Declare(ftxui
 FetchContent_MakeAvailable(ftxui)
 # ------------------------------------------------------------------------------
 
+
 add_executable(houston src/main.cpp)
 target_include_directories(houston PRIVATE src)
 
@@ -34,6 +35,8 @@ target_link_libraries(houston
   PRIVATE ftxui::dom
   PRIVATE ftxui::component 
 )
+
+target_link_libraries(houston PRIVATE statgrab)
 
 if (EMSCRIPTEN)
   string(APPEND CMAKE_CXX_FLAGS " -s USE_PTHREADS")
