listing computer hardware

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ FetchContent_MakeAvailable(ftxui)
 
 add_executable(houston
   src/main.cpp
+  src/status_monitor/status_monitor.cpp
   src/processes_list/process.cpp
   src/processes_list/processes_list.cpp
   src/ui/main_view.cpp
@@ -40,13 +41,20 @@ find_package(PkgConfig REQUIRED)
 pkg_check_modules(STATGRAB REQUIRED libstatgrab)
 find_package(Threads REQUIRED)
 
+# Find libpci
+pkg_check_modules(LIBPCI REQUIRED libpci)
+
+
 target_link_libraries(houston
-  PRIVATE ftxui::screen
-  PRIVATE ftxui::dom
-  PRIVATE ftxui::component
-  PRIVATE ${STATGRAB_LIBRARIES}
-  PRIVATE Threads::Threads
+PRIVATE ftxui::screen
+PRIVATE ftxui::dom
+PRIVATE ftxui::component
+PRIVATE ${STATGRAB_LIBRARIES}
+PRIVATE Threads::Threads
+PRIVATE ${LIBPCI_LIBRARIES}
 )
 
+target_include_directories(houston PRIVATE ${LIBPCI_INCLUDE_DIRS})
+target_compile_options(houston PRIVATE ${LIBPCI_CFLAGS_OTHER})
 target_include_directories(houston PRIVATE ${STATGRAB_INCLUDE_DIRS})
 target_compile_options(houston PRIVATE ${STATGRAB_CFLAGS_OTHER})
